local storage added

--- a/src/app/boards/boards.component.css
+++ b/src/app/boards/boards.component.css
@@ -4,10 +4,12 @@
   margin: 0 25px 25px 0;
   display: inline-block;
   vertical-align: top;
+  box-shadow: 0 0 3px #ccc;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 .example-list {
-  border: solid 1px #ccc;
   min-height: 60px;
   background: white;
   border-radius: 4px;
@@ -27,14 +29,16 @@
   cursor: move;
   background: white;
   font-size: 14px;
+  margin: 15px 5px;
+  box-shadow: 0 0 0 1px #ccc;
+  border-radius: 2px;
 }
 
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
