list as seperate component

--- a/src/app/boards/boards.component.html
+++ b/src/app/boards/boards.component.html
@@ -1,20 +1,8 @@
 <div cdkDropListGroup>
-  <div class="example-container" *ngFor="let board of storyBoard">
-    <h2>{{ board.boardName }}</h2>
-    <div
-      cdkDropList
-      [cdkDropListData]="board.list"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)"
-    >
-      <div
-        class="example-box"
-        [cdkDragData]="item"
-        *ngFor="let item of board.list"
-        cdkDrag
-      >
-        {{ item }}
-      </div>
-    </div>
-  </div>
+  <app-list
+    class="example-container"
+    (saveDarag)="saveInLocal()"
+    *ngFor="let list of storyBoard"
+    [list]="list"
+  ></app-list>
 </div>
