--- a/src/app/boards/boards.component.css
+++ b/src/app/boards/boards.component.css
@@ -1,11 +1,86 @@
-.example-container {
+.list-container {
+  min-height: 150px;
+  position: relative;
   width: 400px;
-  max-width: 100%;
+  max-width: 400px;
   margin: 0 25px 25px 0;
   display: inline-block;
   vertical-align: top;
   box-shadow: 0 0 3px #ccc;
   padding: 5px;
+  padding-top: 10px;
+  padding-bottom: 50px;
   border-radius: 5px;
 }
 
+.card-list {
+  min-height: 60px;
+  background: white;
+  border-radius: 4px;
+  display: block;
+}
+
+.card-box {
+  padding: 20px 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+  margin: 15px 5px;
+  box-shadow: 0 0 0 1px #ccc;
+  border-radius: 2px;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.card-box:last-child {
+  border: none;
+}
+
+.card-list.cdk-drop-list-dragging .card-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+.card-header {
+  position: relative;
+  border-bottom: 1px solid;
+  line-height: 35px;
+  padding: 5px;
+}
+span.card-title {
+  font-size: 20px;
+  font-weight: 500;
+  background: #fff;
+  color: rgba(0, 0, 0, 0.87);
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.add-new {
+  display: inline-block;
+}
+.add-new.add-list {
+  position: absolute;
+  right: 0;
+}
+.add-new.add-card {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+}
