--- a/src/app/boards/confirmation-prompts/confirmation-prompts.html
+++ b/src/app/boards/confirmation-prompts/confirmation-prompts.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content>
-  <p>Do you want to remove {{ data|json }} ?</p>
+  <p>Do you want to remove?</p>
 
 </div>
 <div mat-dialog-actions>
